# FaceRecognition_MTCNN_FaceNet

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  mtcnn.cpp  mtcnn.h  network.h  pBox.h
